# EliteFurretAI

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  EliteFurretAI.code-workspace  GETTING_STARTED.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: lint.yml  tests.yml
data/: .gitattributes  DATA.md  README.md
data/database/: test_frisk.db
data/fixture/: edgecase_logs.txt  example_singles_request.json  example_vgc_teampreview_request.json  gen7anythinggoesanon.json  gen9vgc2023regc_anon10.json  gen9vgc2023regc_anon12.json  gen9vgc2023regc_anon15.json  gen9vgc2023regc_anon16.json  gen9vgc2023regc_anon2.json  gen9vgc2023regc_anon3.json  gen9vgc2023regc_anon4.json  gen9vgc2023regc_anon8.json  gen9vgc2023regc_anon9.json  residual_logs.txt  speed_logs.txt  uturn_logs.txt  vgc_battle_p1_logs.txt  vgc_battle_p2_logs.txt  vgc_battle_team.txt  vgcp1battle.pickle  vgcp2battle.pickle
data/fixture/gen9vgc2023regc_logs/: gen9vgc2023regc_anon.json  gen9vgc2023regc_anon10.json  gen9vgc2023regc_anon11.json  gen9vgc2023regc_anon13.json  gen9vgc2023regc_anon14.json  gen9vgc2023regc_anon17.json  gen9vgc2023regc_anon18.json  gen9vgc2023regc_anon19.json  gen9vgc2023regc_anon20.json  gen9vgc2023regc_anon21.json  gen9vgc2023regc_anon22.json  gen9vgc2023regc_anon23.json  gen9vgc2023regc_anon5.json  gen9vgc2023regc_anon6.json  gen9vgc2023regc_anon7.json
data/fixture/test_battledata/: single_battle_json_anon.pickle  test_online_showdown.pickle  test_write.json  test_write.pickle  test_write_0.json  test_write_1.json  test_write_2.json  tests_self_play.pickle
data/fixture/test_teams/: 2022_behemoth.txt  (+5 more)
docs/research/: RESEARCH.md
examples/: advanced_training_example.py  battle_debug.py  example_battle_debug.py  example_input_training.py  example_multitask_dnn.py  example_sklearn_classifier.py  human_player.py  human_player_example.py  input_training.py  sklearn_classifier.py
planning/: PLANNING.md
planning/stage1/: 2026-02-28-observation-embedding-improvements.md  2026-03-20-16-00-embedding-encoding-improvements.md  2026-03-23-22-30-fix-nan-training-loss.md  2026-03-29-19-30-second-sweep-yaml-refactor.md  2026-03-31-14-00-second-sweep-analysis.md
planning/stage2/: 2026-04-05-16-20-rust-showdown-rl-port-plan.md  2026-04-06-12-00-rust-throughput-optimization-plan.md  2026-04-09-09-35-rust-model-backed-throughput-sweep.md  2026-04-09-18-45-rust-request-corruption-followup.md  2026-04-09-22-39-rust-protocol-corruption-examples.md  2026-04-10-10-15-rust-battle-readout-spec.md  2026-04-10-14-45-rust-backend-operationalization.md  2026-04-10-16-05-single-team-rust-100-update-run.md  2026-04-13-11-20-showdown-benchmark-and-backend-comparison.md  2026-04-13-14-00-training-speed-recommendations.md  2026-04-13-18-00-inference-transport-optimization.md  2026-04-13-22-36-engine-doc-and-rust-runtime-simplification.md  2026-04-13-22-50-merge-team-converter-into-rust-battle-engine.md  2026-04-13-23-10-disable-poke-env-observation-logging.md
src/elitefurretai/: __init__.py
src/supervisedmodels/: README.md
unit_tests/: test_hello_world.py
unit_tests/battle_inference/: test_battle_inference.py  test_inference_utils.py  test_infostate_network.py  test_item_inference.py  test_speed_inference.py
unit_tests/engine/: test_rust_battle_engine.py  test_sync_battle_driver.py
unit_tests/etl/: test_battle_data.py  test_battle_dataset.py  test_battle_iterator.py  test_battle_order_validator.py  test_compress_utils.py  test_embedder.py  test_embedder_improvements.py  test_encoder_edge_cases.py  test_model_double_battle_order.py  test_team_repo.py
unit_tests/inference/: test_battle_inference.py  test_inference_utils.py  test_item_inference.py  test_meta_db.py  test_speed_inference.py
unit_tests/model_utils/: test_battle_data.py  test_battle_dataset.py  test_battle_iterator.py  test_data_processor.py  test_embedder.py  test_model_double_battle_order.py
unit_tests/rl/: __init__.py  test_agent.py  test_agent_learner.py  test_config.py  test_environment.py  test_fast_action_mask.py  test_learner.py  test_mdbo_integration.py  test_memory.py  test_multiprocess_actor.py  test_opponent_pool.py  test_players.py  test_train_utils.py  test_worker.py  test_worker_opponent_factory.py
unit_tests/supervised/: test_behavior_clone_player.py  test_model_archs.py
unit_tests/utils/: test_battle_order_validator.py  test_damage_estimator.py  test_foresight.py  test_frisk.py  test_imprison.py  test_inference_utils.py  test_infostate_network.py  test_meta_db.py  test_team_repo.py
(+962 files in other folders)
