[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elitefurretai"
version = "0.1.0"
description = "EliteFurretAI is a multilayered project aiming to build a superhuman bot that plays VGC."
readme = "README.md"
requires-python = ">=3.7.0"
license = { file = "LICENSE" }
authors = [{ name = "Cayman Simpson", email = "cayman.simpson@gmail.com" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/caymansimpson/elitefurretai"
Research = "https://docs.google.com/document/d/14menCHw8z06KJWZ5F_K-MjgWVo_b7PESR7RlG-em4ic/edit"

[tool.ruff]
line-length = 91
target-version = "py38"
exclude = [
    "data/",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
]
ignore = [
    "E203",   # whitespace before ':' (conflicts with black-style formatting)
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["elitefurretai"]

[tool.ruff.format]
# Use black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
include = ["src"]
exclude = ["data/battles", "data/database", "data/models"]
pythonVersion = "3.7"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "unit_tests",
    "src/elitefurretai/agents",
    "src/elitefurretai/model_utils",
    "src/elitefurretai/supervised_models",
    "src/elitefurretai/utils",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.mypy]
disable_error_code = ["import-untyped"]
check_untyped_defs = true
exclude = [
    "src/elitefurretai/scripts/train/",
    "data/"
]
